--- a/resources/scss/_layout.scss
+++ b/resources/scss/_layout.scss
@@ -1,4 +1,19 @@
 * {
   background-color: silver;
+}
+
+input.error {
+  border: 1px solid red;
+}
+
+input.valid {
+  border: 1px solid white;
+}
+
+.required, .errorMessage {
   color: red;
+}
+
+.paymentSpinner {
+  margin: 0 auto;
 }
