added styles to all app components
Signed-off-by: Yarin Dekel <yarind@amdocs.com>

--- a/resources/scss/_layout.scss
+++ b/resources/scss/_layout.scss
@@ -1,19 +1,71 @@
 * {
-  background-color: silver;
+  box-sizing: border-box;
 }
 
-input.error {
-  border: 1px solid red;
+body {
+  padding: 8px;
+  font-size: $font-size-md;
+  background-color: $silver;
+  font-family: "MyriadPro-Light";
 }
 
-input.valid {
-  border: 1px solid white;
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 -16px;
 }
 
-.required, .errorMessage {
-  color: red;
+.col-25 {
+  flex: 25%;
 }
 
-.paymentSpinner {
-  margin: 0 auto;
+.col-50 {
+  flex: 50%;
+}
+
+.col-10 {
+  flex: 10%;
+}
+
+.col-1 {
+  flex: 1%;
+}
+
+.col-75 {
+  flex: 75%;
+}
+
+.col-25,
+.col-50,
+.col-75,
+.col-10,
+.col-1 {
+  padding: 0 16px;
+}
+
+.inline-flex {
+  display: inline-flex;
+}
+
+/* Responsive layout - when screen is less then 600px, show in separate rows*/
+@media (max-width: 600px) {
+  .col-50, .col-10 {
+    flex: 75%;
+  }
+  .col-25 {
+    margin-bottom: 20px;
+    flex: 75%;
+  }
+  button.btn {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+}
+
+@media (min-width: 1225px) {
+  form {
+    margin: 10px 300px 0 300px;
+  }
 }
