--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -3,4 +3,4 @@
 @import "layout";
 @import "_base";
 @import "features/_payment";
-@import "features/_successPage";
+@import "features/_indicationPage";
