--- a/resources/scss/__base.scss
+++ b/resources/scss/__base.scss
@@ -8,6 +8,7 @@
 }
 
 input[type=text], select {
+  -webkit-appearance: none;
   width: 100%;
   margin-bottom: 20px;
   padding: 12px;
@@ -16,8 +17,8 @@ input[type=text], select {
 }
 
 button {
-  background: linear-gradient(#ffa92c,#ff9801),#ffa92c;
-  border: 1px solid #eb8200;
+  background: linear-gradient($orange1,$orange2),$orange3;
+  border: 1px solid $orange4;
   color: white;
   padding: 12px;
   margin: 10px 0;
@@ -26,16 +27,12 @@ button {
   cursor: pointer;
   font-size: 17px;
   &:hover {
-    border-color: #bf6913;
+    border-color: $orange5;
   }
   &:disabled {
     opacity: 0.65;
     cursor: not-allowed;
   }
-}
-
-a {
-  color: #2196F3;
 }
 
 label {
