--- a/resources/scss/__variables.scss
+++ b/resources/scss/__variables.scss
@@ -1,5 +1,12 @@
+/*fonts*/
 $font-size-sm: '14px';
 $font-size-md: '17px';
 $font-size-lg: 24px;
 
+/*colors*/
 $silver: #f5f5f5;
+$orange1: #ffa92c;
+$orange2: #ff9801;
+$orange3: #ffa92c;
+$orange4: #eb8200;
+$orange5: #bf6913;
