--- a/resources/scss/features/__indicationPage.scss
+++ b/resources/scss/features/__indicationPage.scss
@@ -1,9 +1,4 @@
-.success {
-  //display: flex;
-  //justify-content: center;
-  //align-items: center;
-  //height: 100vh;
-
+.indication-page {
   img {
     width: 100px;
     display: block;
